@@ -1,3 +1,8 @@
+Mon Aug  4 14:35:22 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* gconf-property-editor.c (gconf_property_editor_init): Reset the
+	old connection when setting a new one, #116232
+
 2003-07-07  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.3.4
